cmake_minimum_required(VERSION 3.10)
PROJECT(leetcode)

#ADD_SUBDIRECTORY(src)

ADD_DEFINITIONS("-std=c++11")
SET(INCLUDE ${CMAKE_SOURCE_DIR}/gtest/include)
SET(LIBS ${CMAKE_SOURCE_DIR}/gtest/libs)

INCLUDE_DIRECTORIES(${INCLUDE})
LINK_DIRECTORIES(${LIBS})
ADD_SUBDIRECTORY(test)

ADD_EXECUTABLE(leetcode main.cpp)
#TARGET_INCLUDE_DIRECTORIES(leetcode PUBLIC ${INCLUDE})
TARGET_LINK_LIBRARIES(leetcode test gtest)
